WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191958
Object allocation sinking phase needs to iterate each scope offset instead of just iterating the symbol table's hashmap when handling an activation
https://bugs.webkit.org/show_bug.cgi?id=191958
Summary
Object allocation sinking phase needs to iterate each scope offset instead of...
Saam Barati
Reported
2018-11-25 20:36:36 PST
Otherwise, we may ignore duplicate entries in the map even though there was more than one scope offset created for them
Attachments
patch
(4.43 KB, patch)
2018-11-25 20:42 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch
(4.43 KB, patch)
2018-11-25 20:44 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2018-11-25 20:37:17 PST
<
rdar://problem/46221877
>
Saam Barati
Comment 2
2018-11-25 20:42:52 PST
Created
attachment 355617
[details]
patch
Saam Barati
Comment 3
2018-11-25 20:44:24 PST
Created
attachment 355618
[details]
patch
Yusuke Suzuki
Comment 4
2018-11-25 23:24:49 PST
Comment on
attachment 355618
[details]
patch r=me
WebKit Commit Bot
Comment 5
2018-11-26 12:14:50 PST
Comment on
attachment 355618
[details]
patch Clearing flags on attachment: 355618 Committed
r238510
: <
https://trac.webkit.org/changeset/238510
>
WebKit Commit Bot
Comment 6
2018-11-26 12:14:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug