Object allocation sinking phase needs to iterate each scope offset instead of just iterating the symbol table's hashmap when handling an activation https://bugs.webkit.org/show_bug.cgi?id=191958 <rdar://problem/46221877>

Reviewed by Yusuke Suzuki.

JSTests:

* stress/object-allocation-sinking-phase-needs-to-write-to-each-scope-offset.js: Added.
(x):
(foo):

Source/JavaScriptCore:

There may be more entries in an activation than unique variables
in a symbol table's hashmap. For example, if you have two parameters
to a function, and they both are the same name, and the function
uses eval, we'll end up with two scope slots, but only a single
entry in the hashmap in the symbol table. Object allocation sinking
phase was previously iterating over the hashmap, assuming these
values were equivalent. This is wrong in the above case. Instead,
we need to iterate over each scope offset.

* dfg/DFGObjectAllocationSinkingPhase.cpp:
* runtime/GenericOffset.h:
(JSC::GenericOffset::operator+=):
(JSC::GenericOffset::operator-=):


Canonical link: https://commits.webkit.org/206677@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238510 268f45cc-cd09-0410-ab3c-d52691b4dbfc